<resources>
    <string name="app_name">Shoe Store Inventory App</string>
    <string name="login_screen">Login</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email here..</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password here..</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with_existing_account">Login with existing</string>
    <string name="welcome_message">Welcome to Shoe Store App</string>
    <string name="welcome_description">make tomorrow beautiful</string>
    <string name="next">Next</string>
    <string name="instructions_title">Shoe Shop Instructions</string>
    <string name="instructions_description">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.\n\nWe have a huge collection of shoes so make sure you will find what you want.</string>
    <string name="get_started">Get Started!</string>
    <string name="logout">Logout</string>
    <string name="add_shoe">Add new shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="company_name">Company Name</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
</resources>