<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="instructionsViewModel"
            type="com.example.shoestoreinventoryapp.screens.instructions.InstructionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        Screen Title-->
        <TextView
            android:id="@+id/instructionsTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/label_margin"
            android:text="@string/instructions_title"
            android:textSize="@dimen/screen_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        Instructions-->
        <TextView
            android:id="@+id/instructionsDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/label_margin"
            android:text="@string/instructions_description"
            android:textSize="@dimen/instructions_description_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionsTitleText" />

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/label_margin"
            android:onClick="@{() -> instructionsViewModel.onGetStartedButtonClicked()}"
            android:padding="@dimen/button_padding"
            android:text="@string/get_started"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>